# MLOps

./: README.md  pyproject.toml
week-1/: eval_methods.py  main.py  numpy_logistic_regression.py  preprocessing.py  titanic_survival_part_1.py  titanic_survival_part_2.py  titanic_survival_part_2_copy.py  visualisations.py
week-1/Reports/: part_1_report.ipynb  part_2_report.ipynb
week-1/jupyter_notebooks/: part_1.ipynb  part_2.ipynb
week-1/templates/: titanic_survival_part_2_template.ipynb
week-2/data/: direct_rentals_prepared.parquet  hourly_rentals_by_location.parquet  hourly_weather.parquet  joined_feature_table.parquet  raw_direct_rentals.parquet
week-2/data_analysis/: designing_preprocessing_logic.ipynb  exploring_preprocessing_data.ipynb  preprocessing_data.ipynb
week-2/data_preprocessing/: load_merge_csv_data.py
week-2/src/bike_rental/: definitions.py
week-2/src/bike_rental/defs/assets/: aggregated_data.py  feature_engineering.py  holidays.py  joins.py  raw_data.py  rentals.py  weather.py
week-2/src/bike_rental/defs/io_managers/: parquet_io_manager.py
week-2/src/bike_rental/defs/resources/: paths.py
week-2/templates/bike_rental/data/: direct_rentals.parquet  holiday_features.parquet  holidays.parquet  hourly_rentals_by_location.parquet  hourly_weather.parquet  joined_feature_table.parquet  processed_direct_rentals.parquet  processed_weather.parquet  raw_holidays.parquet  raw_weather.parquet  weather.parquet
week-2/templates/bike_rental/data_analysis/: preprocessing_data.ipynb
week-2/templates/bike_rental/src/bike_rental/: definitions.py
(+8 files in other folders)
