[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.12.1",
    "dagster-webserver>=1.12.1",
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "nbconvert>=7.17.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pandas-stubs>=2.2.2.240807",
    "polars>=1.36.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["week-2/src"]

[tool.dagster]
module_name = "bike_rental.definitions"
code_location_name = "bike_rental"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"